<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register">Register</string>
    <string name="welcome_to_shoe_store_app">Welcome to Shoe Store App</string>
    <string name="welcome_text">Here you can manage your shoes by adding them.</string>
    <string name="go_to_instructions">Go to instructions</string>
    <string name="instructions">Instructions:</string>
    <string name="instructions_1">- Tap the + button</string>
    <string name="fill_in_your_sneaker_details">- Fill in your sneaker details</string>
    <string name="tap_save_button">- Tap save button</string>
    <string name="go_to_shoe_list">Go to shoe list</string>
    <string name="name_label">Shoe name:</string>
    <string name="size_label">Shoe size:</string>
    <string name="company_name_label">Company name:</string>
    <string name="description">Description:</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="logout">Logout</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter name</string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
</resources>
