<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/name_label"
                style="@style/labels_style"
                android:text="@string/name_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shoe_name"
                style="@style/fields_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/name_label"
                app:layout_constraintLeft_toRightOf="@id/name_label"
                app:layout_constraintTop_toTopOf="@id/name_label"
                tools:text="Air jordan" />

            <TextView
                android:id="@+id/company_label"
                style="@style/labels_style"
                android:layout_marginTop="5dp"
                android:text="@string/company_name_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_label" />

            <TextView
                android:id="@+id/shoe_company"
                style="@style/fields_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/company_label"
                app:layout_constraintLeft_toRightOf="@id/company_label"
                app:layout_constraintTop_toTopOf="@id/company_label"
                tools:text="Nike" />

            <TextView
                android:id="@+id/size_label"
                style="@style/labels_style"
                android:layout_marginTop="5dp"
                android:text="@string/size_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_label" />

            <TextView
                android:id="@+id/shoe_size"
                style="@style/fields_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/size_label"
                app:layout_constraintLeft_toRightOf="@id/size_label"
                app:layout_constraintTop_toTopOf="@id/size_label"
                tools:text="40" />

            <TextView
                android:id="@+id/description_label"
                style="@style/labels_style"
                android:layout_marginTop="5dp"
                android:text="@string/description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/size_label" />

            <TextView
                android:id="@+id/shoe_description"
                style="@style/fields_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/description_label"
                app:layout_constraintLeft_toRightOf="@id/description_label"
                app:layout_constraintTop_toTopOf="@id/description_label"
                tools:text="Red/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>
